-debug -upgrade JavaChain(isValid,isValidAll,addBlock)